Menu open body overflow bugfix

--- a/src/App.css
+++ b/src/App.css
@@ -353,6 +353,14 @@
   background-repeat: no-repeat;
 }
 
+.body-overflow-hidden {
+  overflow: hidden !important;
+}
+
+body {
+  overflow: auto !important;
+}
+
 @media screen and (max-width: 580px) {
   .header-bg-img {
     background-size: auto 100%;
